objects/ssot__DriverPerformanceSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BrakeEventCount__c</fullName>
        <label>Brake Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceTravelledNumber__c</fullName>
        <label>Distance Travelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceTravelledUomId__c</fullName>
        <label>Distance Travelled UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDateTime__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDateTime__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumedNumber__c</fullName>
        <label>Fuel Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumedUomId__c</fullName>
        <label>Fuel Consumed UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Driver Performance Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatorId__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftCount__c</fullName>
        <label>Shift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationCount__c</fullName>
        <label>Violation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761231559_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DriverPerformanceSummary_ContactId_m_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>DriverPerformanceSummary_ContactId_m_rel</relationshipLabel>
        <relationshipName>rel_1697761231559_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761231644_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DriverPerformanceSummary_DistanceTra_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>DriverPerformanceSummary_DistanceTra_rel</relationshipLabel>
        <relationshipName>rel_1697761231644_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761231721_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DriverPerformanceSummary_FuelConsume_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>DriverPerformanceSummary_FuelConsume_rel</relationshipLabel>
        <relationshipName>rel_1697761231721_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>